--- a/src/main/resources/templates/post/show.html
+++ b/src/main/resources/templates/post/show.html
@@ -5,11 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-<ul>
-    <li th:each="post : ${posts}">
-        <a href="post/${post.id}"><h1 th:text="${post.title}"></h1></a>
-        <p th:text="${post.content}"></p>
-    </li>
-</ul>
+<h2 th:text="${post.title}"></h2>
+<p th:text="${post.content}"></p>
 </body>
 </html>
